--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 <body>
     <h1>Interaktive Dreh-Scheibe</h1>
     <div id="disk-container">
-        <img id="rotating-disk" src="images/disk_0.png" alt="Drehende Scheibe">
+        <img id="rotating-disk" src="images/disk-0.png" alt="Drehende Scheibe">
     </div>
-    <button id="rotate-left">Nach Links</button>
-    <button id="rotate-right">Nach Rechts</button>
+    
+    <!--<img id="grass" src="images/grass.png" alt="Gras">-->
+    <button id="rotate-left">Nach Links (L)</button>
+    <button id="rotate-right">Nach Rechts (R)</button>
     <button id="auto-rotate">Automatisches Drehen (A)</button>
 
     <script src="script.js"></script>
 </body>
 <footer>
     <p>Bildquelle: Eigene Erstellung</p>
+    
+    <!--<p>Scheibe: eigene Erstellung</p>-->
+    <!--<p>Gras: entworfen von cyudeshbuhu von https://pngtree.com/freepng/grass-cartoon_9006357.html?sol=downref&id=bef</p>-->
 </footer>
 </html>
